--- a/src/components/ContentModal/ContentModal.css
+++ b/src/components/ContentModal/ContentModal.css
@@ -1,4 +1,4 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
 
 .ContentModal__landscape {
   object-fit: contain;
@@ -55,8 +55,8 @@
   overflow-y: scroll;
   padding: 15px;
   border-radius: 20px;
-  scrollbar-width: thin;*/ /* Firefox */
-  /* box-shadow: inset 0 0 5px #000000;
+  scrollbar-width: thin; /* Firefox */
+  box-shadow: inset 0 0 5px #000000;
   text-align: justify;
 }
 
@@ -88,4 +88,4 @@
   .ContentModal__description {
     font-size: 22px;
   }
-}  */
+} 
