--- a/src/components/ContentModal/Carousel/Carousel.css
+++ b/src/components/ContentModal/Carousel/Carousel.css
@@ -1,4 +1,4 @@
-/* .carouselItem {
+.carouselItem {
     display: flex;
     flex-direction: column;
     object-fit: contain;
@@ -8,4 +8,4 @@
     border-radius: 10px;
     margin-bottom: 5px;
     box-shadow: 0px 0px 5px black;
-} */
+}
