--- a/src/components/SingleContent/SingleContent.css
+++ b/src/components/SingleContent/SingleContent.css
@@ -8,6 +8,7 @@
     border-radius: 10px;
     position: relative;
     font-family: "Montserrat", sans-serif;
+    cursor: pointer;
   }
   
   .media:hover {
